# business-automation

./: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
dataset/demo/: ace_plumbing_demo.txt  bens_electric_demo.txt  bens_electric_request.json  comfort_hvac_demo.txt  green_lawn_demo.txt  reliable_electric_demo.txt  sunshine_hvac_demo.txt  transcript.txt
dataset/onboarding/: ace_plumbing_onboarding.txt  bens_electric_onboarding.txt  comfort_hvac_onboarding.txt  green_lawn_onboarding.txt  reliable_electric_onboarding.txt  sunshine_hvac_onboarding.txt
src/: __init__.py  config.py  schemas.py  utils.py
src/api/: __init__.py
src/api/routers/: __init__.py  accounts.py  dataset.py  db.py  health.py  pipeline.py
src/db/: __init__.py
src/extractors/: __init__.py  demo.py  onboarding.py
src/generators/: __init__.py  agent_spec.py
workflows/: demo_pipeline.json  full_pipeline.json  onboarding_pipeline.json
