[project]
name = "agent-automation"
version = "0.1.0"
description = "Zero-cost automation pipeline: Demo Call -> Retell Agent Draft -> Onboarding Updates -> Agent Revision"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0", 
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
agent = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
